--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ repository = "https://github.com/YGGverse/htcount"
 
 [dependencies]
 anyhow = "1.0"
+chrono = "0.4"
 clap = { version = "4.5", features = ["derive"] }
